--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-messages": "^1.0.1",
     "express-session": "^1.15.6",
     "express-validator": "^5.3.0",
+    "fs": "0.0.1-security",
     "image-size": "^0.6.3",
     "mongoose": "*",
     "multer": "^1.4.1",
